insert_company.html creatd

--- a/templates/company.html
+++ b/templates/company.html
@@ -8,12 +8,8 @@
 <body>
   <h1>Stock Predictor</h1>
   <h2>Input a Company's name to predict its stock for the day!</h2>
-  <form action="company.html" method="POST">
-    Company name:<br>
-    <input type="text" name="companyname"><br>
-    <br><br>
- 	<input type="submit" value="Submit">
-  </form>
+  <div>
+    {{name}}
   </menu>
 </body>
 </html>
