--- a/templates/insert_company.html
+++ b/templates/insert_company.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Stock Predictor</h1>
   <h2>Input a Company's name to predict its stock for the day!</h2>
-  <form action="company.html" method="POST">
+  <form action="company.html" method="GET">
     Company name:<br>
     <input type="text" name="companyname"><br>
     <br><br>
